<resources>
    <string name="app_name">Anotech</string>
    <string name="table_name">Administration</string>
    <string name="tables_intro">This provides information on the various tables present in the database.</string>
    <string name="activity_happened">Outlier Type : </string>
    <string name="target">OrderDetails</string>
    <string name="anomaly_intro">Here you can select type of anomaly case you want to test.</string>
    <string name="order_number">orderNumber</string>
    <string name="product_code">productCode</string>
    <string name="quantity_ordered">quantityOrdered</string>
    <string name="order_line_numnber">orderLineNumber</string>
    <string name="price_each">priceEach</string>
    <string name="insert">INSERT</string>
    <string name="order_details">Order Details</string>
    <string name="structure_viewer">Structure Viewer</string>
    <string name="table_columns">Table Columns</string>
    <string name="attribute_name">attributeName</string>
    <string name="attribute_type"><![CDATA[<type>]]></string>
    <string name="done">Done! You can find the results in Anomalies Tab.</string>
    <string name="run_test">RUN TEST</string>
    <string name="orders">Orders</string>
    <string name="order_date">orderDate</string>
    <string name="required_date">requiredDate</string>
    <string name="shipped_date">shippedDate</string>
    <string name="status">status</string>
    <string name="comments">comments</string>
    <string name="customer_number">customerNumber</string>
    <string name="create_table_customer">

CREATE TABLE `customers` (
  `customerNumber` int(11) NOT NULL,
  `customerName` varchar(50) NOT NULL,
  `contactLastName` varchar(50) NOT NULL,
  `contactFirstName` varchar(50) NOT NULL,
  `phone` varchar(50) NOT NULL,
  `addressLine1` varchar(50) NOT NULL,
  `addressLine2` varchar(50) DEFAULT NULL,
  `city` varchar(50) NOT NULL,
  `state` varchar(50) DEFAULT NULL,
  `postalCode` varchar(15) DEFAULT NULL,
  `country` varchar(50) NOT NULL,
  `salesRepEmployeeNumber` int(11) DEFAULT NULL,
  `creditLimit` decimal(10,2) DEFAULT NULL,
  PRIMARY KEY (`customerNumber`),
  CONSTRAINT `customers_ibfk_1` FOREIGN KEY (`salesRepEmployeeNumber`) REFERENCES `employees` (`employeeNumber`)
);
    </string>
    <string name="create_table_tickets">

CREATE TABLE `tickets` (
  `pnr_number` int(50) NOT NULL,
  `transaction_number` int(50) NOT NULL,
  `train_number` varchar(10) NOT NULL,
  `from` varchar(10) NOT NULL,
  `to` varchar(10) NOT NULL
);
    </string>
    <string name="create_table_transactions">

CREATE TABLE `transactions` (
  `pnr_number` int(50) NOT NULL,
  `transaction_number` int(50) NOT NULL,
  `amount` int(50) NOT NULL,
  `payment_mode` varchar(50) NOT NULL
);
    </string>
    <string name="create_table_movie_tickets">

CREATE TABLE `movie_tickets` (
  `ticket_number` int(50) NOT NULL,
  `seat_number` varchar(50) NOT NULL,
  `movie` varchar(50) NOT NULL,
  `audi` varchar(10) NOT NULL
);
    </string>
    <string name="create_table_movie_transactions">

CREATE TABLE `movie_transactions` (
  `ticket_number` int(50) NOT NULL,
  `transaction_number` int(50) NOT NULL,
  `amount` int(50) NOT NULL,
  `payment_mode` varchar(50) NOT NULL
);
    </string>
    <string name="create_employees">

      CREATE TABLE `employees` (
  `employeeNumber` int(11) NOT NULL,
  `lastName` varchar(50) NOT NULL,
  `firstName` varchar(50) NOT NULL,
  `extension` varchar(10) NOT NULL,
  `email` varchar(100) NOT NULL,
  `officeCode` varchar(10) NOT NULL,
  `reportsTo` int(11) DEFAULT NULL,
  `jobTitle` varchar(50) NOT NULL,
  PRIMARY KEY (`employeeNumber`),
  CONSTRAINT `employees_ibfk_1` FOREIGN KEY (`reportsTo`) REFERENCES `employees` (`employeeNumber`),
  CONSTRAINT `employees_ibfk_2` FOREIGN KEY (`officeCode`) REFERENCES `offices` (`officeCode`)
);
    </string>
    <string name="create_offices">

    CREATE TABLE `offices` (
  `officeCode` varchar(10) NOT NULL,
  `city` varchar(50) NOT NULL,
  `phone` varchar(50) NOT NULL,
  `addressLine1` varchar(50) NOT NULL,
  `addressLine2` varchar(50) DEFAULT NULL,
  `state` varchar(50) DEFAULT NULL,
  `country` varchar(50) NOT NULL,
  `postalCode` varchar(15) NOT NULL,
  `territory` varchar(10) NOT NULL,
  PRIMARY KEY (`officeCode`)
);

    </string>
    <string name="create_order_Details">

    CREATE TABLE `orderdetails` (
  `orderNumber` int(11) NOT NULL,
  `productCode` varchar(15) NOT NULL,
  `quantityOrdered` int(11) NOT NULL,
  `priceEach` decimal(10,2) NOT NULL,
  `orderLineNumber` smallint(6) NOT NULL,
  PRIMARY KEY (`orderNumber`,`productCode`),
  CONSTRAINT `orderdetails_ibfk_1` FOREIGN KEY (`orderNumber`) REFERENCES `orders` (`orderNumber`),
  CONSTRAINT `orderdetails_ibfk_2` FOREIGN KEY (`productCode`) REFERENCES `products` (`productCode`)
);

    </string>
    <string name="create_orders">

  CREATE TABLE `orders` (
  `orderNumber` int(11) NOT NULL,
  `orderDate` date NOT NULL,
  `requiredDate` date NOT NULL,
  `shippedDate` date DEFAULT NULL,
  `status` varchar(15) NOT NULL,
  `comments` text,
  `customerNumber` int(11) NOT NULL,
  PRIMARY KEY (`orderNumber`),
  CONSTRAINT `orders_ibfk_1` FOREIGN KEY (`customerNumber`) REFERENCES `customers` (`customerNumber`)
);

    </string>
    <string name="create_payments">

     CREATE TABLE `payments` (
  `customerNumber` int(11) NOT NULL,
  `cardNumber` varchar(100) NOT NULL,
  `paymentDate` date NOT NULL,
  `amount` decimal(10,2) NOT NULL,
        
        CONSTRAINT `payments_ibfk_1` FOREIGN KEY (`customerNumber`) REFERENCES `customers` (`customerNumber`)
);

    </string>
    <string name="create_product_lines">

     CREATE TABLE `productlines` (
  `productLine` varchar(50) NOT NULL,
  `textDescription` varchar(4000) DEFAULT NULL,
  `htmlDescription` mediumtext,
  `image` mediumblob,
  PRIMARY KEY (`productLine`)
);


    </string>
    <string name="create_products">

    CREATE TABLE `products` (
  `productCode` varchar(15) NOT NULL,
  `productName` varchar(70) NOT NULL,
  `productLine` varchar(50) NOT NULL,
  `productScale` varchar(10) NOT NULL,
  `productVendor` varchar(50) NOT NULL,
  `productDescription` text NOT NULL,
  `quantityInStock` smallint(6) NOT NULL,
  `buyPrice` decimal(10,2) NOT NULL,
  `MSRP` decimal(10,2) NOT NULL,
  PRIMARY KEY (`productCode`),
  CONSTRAINT `products_ibfk_1` FOREIGN KEY (`productLine`) REFERENCES `productlines` (`productLine`)
);

    </string>
    <string name="ticketNumber">ticketNumber</string>
    <string name="seat_number">seatNumber</string>
    <string name="movie">movie</string>
    <string name="audi">audi</string>
    <string name="i_phone">Apple iPhone 7</string>
    <string name="mi">Xiomi Mi Band 2</string>
    <string name="price_apple">₹0</string>
    <string name="price_mi">₹1999</string>
    <string name="buy">BUY</string>
    <string name="complete_order">Please complete order for the product: </string>
    <string name="product_name">product_name </string>
    <string name="with_bill"> with bill of </string>
    <string name="bill">₹500</string>
</resources>