<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="?attr/colorPrimary" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/structure_item_padding">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ticketNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ticketNumber"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/structure_item_padding"
                android:layout_marginLeft="@dimen/structure_item_padding"
                android:layout_marginRight="@dimen/structure_item_padding">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/seatNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/seat_number"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/structure_item_padding_half"
                android:layout_marginLeft="@dimen/structure_item_padding"
                android:layout_marginRight="@dimen/structure_item_padding">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/movie"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/structure_item_padding_half"
                android:layout_marginLeft="@dimen/structure_item_padding"
                android:layout_marginRight="@dimen/structure_item_padding">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/audi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/audi"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/insert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/structure_item_padding_half"
                android:layout_marginLeft="@dimen/structure_item_padding"
                android:layout_marginRight="@dimen/structure_item_padding"
                android:text="@string/insert"
                android:theme="@style/ButtonTheme" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>

